[package]
name = "vanilla-example"
version = "0.1.0"
authors = ["Philip Peterson <pc.peterso@gmail.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    "Window", 
    "Document", 
    "HtmlElement", 
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Node", 
    "Text", 
] }
